public/assets/css/main.css
html, body {
    height: 100%;
}

body {
    margin: 0;
    padding: 0;
    color: #000000;
    display: table;
    font-weight: 100;
    font-family: 'Lato';
    background-repeat: no-repeat;
    background-size: 100% auto;
}

img {
    width: 980px;
}

.spinner {
    height: 178px;
    vertical-align: bottom;
    text-align: center;
    position: relative;
}

i.fa-spinner {
    font-size: 60px;
    position: absolute;
    bottom: 40px;
    left: 50%;
}

.container {
    text-align: center;
    display: table-cell;
    vertical-align: middle;
}

.content {
    text-align: center;
    display: inline-block;
}

.title {
    font-size: 96px;
    margin-bottom: 40px;
}

.quote {
    font-size: 24px;
}

.showButton {
    background-color: #ac2925;
}

area {
    background-color: #ac2925;
    opacity: 0.5;
}

.fixed-nav-bar {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
    width: 100%;
    height: 50px;
    background-color: #00a087;
}

.img-top-bar {
    width: 100%;
}

.hiddenLink {
    position: absolute;
    opacity: 0.5;
    z-index: 3;
}

